--- a/card-first/index.html
+++ b/card-first/index.html
@@ -15,11 +15,11 @@
 
   <div class="card container">
     <div class="row">
-      <div class="img col-lg-6 col-md-12">
-        <img class="img-product" src="/assets/images/image-product-desktop.jpg" alt="product-image">
+      <div class="img col">
+        <img class="img-product" src="assets/images/image-product-desktop.jpg" alt="product-image">
       </div>
   
-      <div class="information col-lg-6 col-md-12">
+      <div class="information col">
         <p class="perfume">PERFUME</p>
         <h1>Gabrielle Essence Eau De Parfum</h1>
         <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
