--- a/yarsale/newPassword.html
+++ b/yarsale/newPassword.html
@@ -11,9 +11,9 @@
 
     <div class="login">
         <div class="form-container">
-            <img src="" alt="logo" class="logo">
-            <h1>Create a new password</h1>
-            <p>Enter a new password for your account</p>
+            <img src="assets/logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <h1 class="tittle">Create a new password</h1>
+            <p class="subtitle">Enter a new password for your account</p>
             <form action="/" class="form">
                 <label for="password" class="label">Password</label>
                 <input type="password" name="password" id="password" placeholder="*********" class="input input-password">
