--- a/yarsale/newPassword.html
+++ b/yarsale/newPassword.html
@@ -19,7 +19,7 @@
                 <input type="password" name="password" id="password" placeholder="*********" class="input input-password">
                 <label for="re-password" class="label">Re-enter Password</label>
                 <input type="password" name="re-password" id="password" placeholder="*********" class="input input-re-password">
-                <button type="submit" class="-button login-ubtton">Confirm</button>
+                <button type="submit" class="primary-button login-button">Confirm</button>
             </form>
         </div>
     </div>
