change name edit by create html, corrections style

--- a/yarsale/createAccount.html
+++ b/yarsale/createAccount.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="login">
-        <div class="container"> 
+        <div class="container container-edit"> 
             <h1 class="tittle tittle-edit">My account</h1>
-            <form action="/" class="form form-container">
+            <form action="/" class="form form-container-edit">
                 <div class="form-edit">
                     <label for="name" class="label">Name</label>
                     <input type="text" name="name" id="name" placeholder="your name" class="input inputEdit-name">
