create menu desktop and mobile

--- a/yarsale/pageMain.html
+++ b/yarsale/pageMain.html
@@ -11,167 +11,209 @@
 
     <section class="main-container">
         <div class="cards-container">
+
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
-            </div>
-            <div class="product-card">
-                <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
-            </div>
-            <div class="product-card">
-                <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
             <div class="product-card">
                 <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
+
             <div class="product-card">
                 <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
-                </figure>
             </div>
-        </div>
+            <div class="product-card">
+                <img src="assets/img-products/bike-img.jpg" alt="image-product" class="product-img">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img src="assets/img-products/helmet-img.jpg" alt="image-product" class="product-img">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Helmet</p>
+                    </div>
+                    <figure>
+                        <img src="assets/icons/Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="icon-add-card">
+                    </figure>
+                </div>
+            </div>
+            
+
     </section>
 </body>
 </html>
