Create shopping cart

--- a/yarsale/detailProduct.html
+++ b/yarsale/detailProduct.html
@@ -3,48 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yardsale</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
 
-    <nav>
-        <img src="assets/icons/Platzi_YardSale_Icons/icon_menu.svg" alt="menu" class="menu">
-
-        <div class="navbar-left">
-            <img src="assets/logos/logo_yard_sale.svg" alt="logo" class="logo-navbar">
-            <ul>
-                <li>
-                    <a href="/">All</a>
-                </li>
-                <li>
-                    <a href="/">Clothes</a>
-                </li>
-                <li>
-                    <a href="/">Electronics</a>
-                </li>
-                <li>
-                    <a href="/">Furniture</a>
-                </li>
-                <li>
-                    <a href="/">Toys</a>
-                </li>
-                <li>
-                    <a href="/">Others</a>
-                </li>
-            </ul>
+    <aside class="product-detail">
+        <div class="product-detail-close">
+            <img src="assets/icons/Platzi_YardSale_Icons/icon_close.png" alt="img-close">
         </div>
-        <div class="navbar-right">
-            <ul>
-                <li class="navbar-email">lorenzo@email.com</li>
-                <li class="navbar-shopping-cart">
-                    <img src="assets/icons/Platzi_YardSale_Icons/icon_shopping_cart.svg" alt="icon_shopping_cart">
-                    <div>2</div>
-                </li>
-            </ul>
+        <img src="assets/img-products/bike-img.jpg" alt="img-product">
+        <div class="product-information">
+            <p>$35,00</p>
+            <p>Bike</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quo tempora corrupti.</p>
+            <button class="primary-button add-cart-button">
+                <img src="assets/icons/Platzi_YardSale_Icons/bt_added_to_cart.svg" alt="icon-add-cart">
+                Add to cart
+            </button>
         </div>
-    </nav>
+    </aside>
 
 </body>
 </html>
